// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MobileWorkingPastWorkOrdersView Component should match snapshot when loading 1`] = `
<DocumentFragment>
  <div
    class="mobile-work-order-container"
  >
    <div
      class="date-picker-container"
    >
      <label
        class="lbh-heading-h2"
        for="date-picker"
      >
        Select date
      </label>
      <select
        data-testid="date-picker"
        role="combobox"
      >
        <option
          value="2024-11-11"
        >
          2024-11-11
        </option>
        <option
          value="2024-11-08"
        >
          2024-11-08
        </option>
        <option
          value="2024-11-07"
        >
          2024-11-07
        </option>
        <option
          value="2024-11-06"
        >
          2024-11-06
        </option>
        <option
          value="2024-11-05"
        >
          2024-11-05
        </option>
      </select>
    </div>
    <div>
      Loading...
    </div>
  </div>
</DocumentFragment>
`;

exports[`MobileWorkingPastWorkOrdersView Component should match snapshot when there are no work orders 1`] = `
<DocumentFragment>
  <div
    class="mobile-work-order-container"
  >
    <div
      class="date-picker-container"
    >
      <label
        class="lbh-heading-h2"
        for="date-picker"
      >
        Select date
      </label>
      <select
        data-testid="date-picker"
        role="combobox"
      >
        <option
          value="2024-11-11"
        >
          2024-11-11
        </option>
        <option
          value="2024-11-08"
        >
          2024-11-08
        </option>
        <option
          value="2024-11-07"
        >
          2024-11-07
        </option>
        <option
          value="2024-11-06"
        >
          2024-11-06
        </option>
        <option
          value="2024-11-05"
        >
          2024-11-05
        </option>
      </select>
    </div>
    <div
      class="warning-info-box govuk-inset-text lbh-inset-text"
    >
      <div
        class="lbh-warning-text govuk-warning-text"
      >
        <span
          aria-hidden="true"
          class="govuk-warning-text__icon"
        >
          !
        </span>
        <div
          class="govuk-warning-text__text"
        >
          <span
            class="govuk-warning-text__assistive"
          >
            Warning
          </span>
          <p
            class="govuk-!-margin-top-0 lbh-body-s lbh-!-font-weight-bold"
          >
            No work orders displayed
          </p>
          <p
            class="lbh-body-xs govuk-!-margin-top-1"
          >
            Please contact your supervisor
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MobileWorkingPastWorkOrdersView Component should match snapshot when there are work orders 1`] = `<DocumentFragment />`;
